# codechain-dashboard

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  package.json
client/: .travis.yml  Cargo.toml  README.md
client/doc/: make.bat
client/doc/source/: conf.py  index.rst
client/src/: agent.rs  agent.yml  client.rs  client.yml  handler.rs  hardware_usage.rs  main.rs  types.rs
client/src/logger/: logger.rs  macros.rs  mod.rs
client/src/process/: binary_update.rs  codechain_process.rs  fs_util.rs  git_update.rs  git_util.rs  mod.rs  rpc.rs  update.rs
client/src/rpc/: api.rs  mod.rs  router.rs  types.rs
doc/source/: index.rst
public/: index.html
server/: .travis.yml  Cargo.toml  README.md  create_user_and_db.sql
server/src/: common_rpc_types.rs  daily_reporter.rs  event_propagator.rs  jsonrpc.rs  lib.rs  main.rs  router.rs  rpc.rs  util.rs
server/src/agent/: agent.rs  codechain_rpc.rs  handler.rs  mod.rs  (+1 more)
source/: index.rst  index.rst.backup
src/: RequestAgent.ts  actions.ts  agent.rs  agent.yml  common_rpc_types.rs  event_propagator.rs  frontend_handler.rs  handler.rs  hardware_usage.rs  index.tsx  jsonrpc.rs  main.rs  process.rs  reducers.ts  router.rs  rpc.rs  types.rs
src/actions/: chainNetworks.ts  log.ts  nodeInfo.ts
src/agent/: agent.rs  codechain_rpc.rs  handler.rs  mod.rs  service.rs  types.rs
src/db/: event.rs  mod.rs  service.rs  types.rs
src/frontend/: api.rs  handler.rs  mod.rs  types.rs
src/logger/: macros.rs  mod.rs
src/process/: binary_update.rs  codechain_process.rs  fs_util.rs  git_update.rs  git_util.rs  mod.rs  rpc.rs
src/reducers/: chainNetworks.ts  index.ts  log.ts  nodeInfo.ts
src/request/: index.ts
src/requests/: index.ts  sockette.d.ts  types.ts
src/rpc/: api.rs  frontend.rs  mod.rs  router.rs  types.rs
src/styles/: _variables.scss  index.scss
src/utils/: getStatusClass.ts
ui/: .gitignore  README.md  package.json  tsconfig.json  tslint.json
ui/public/: index.html
ui/src/: RequestAgent.ts  index.tsx  setupTests.ts
(+139 files in other folders)
