[package]
name = "codechain-agent-hub"
version = "0.1.0"
authors = ["Juhyung Park"]

[dependencies]
ws = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
atty = "0.2"
colored = "1.6"
env_logger = "0.5.7"
log = "0.4.1"
time = "0.1"

