[package]
name = "codechain-agent"
version = "0.1.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]

[dependencies]
atty = "0.2"
colored = "1.6"
env_logger = "0.5.7"
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
log = "0.4.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
subprocess = "*"
time = "0.1"
ws = "*"
