[package]
name = "codechain-agent-hub"
version = "0.1.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]

[dependencies]
atty = "0.2"
chrono = { version = "0.4", features = ["serde"] }
colored = "1.6"
env_logger = "0.5.7"
iron = "*"
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
log = "0.4.1"
postgres = { version = "0.15", features = ["with-chrono"] }
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4.0" }
rand = "0.5.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
ws = "*"
