[package]
name = "codechain-agent"
version = "0.1.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]

[dependencies]
atty = "0.2"
clap = { version = "*", features = ["yaml"] }
colored = "1.6"
crossbeam = "0.4"
env_logger = "0.5.7"
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
libc = "0.2"
log = "0.4.1"
parking_lot = "0.7.1"
reopen = "0.2.2"
reqwest = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
subprocess = "0.1.18"
sysinfo = "0.6.1"
systemstat = "0.1.3"
time = "0.1"
ws = "*"
